[package]
name = "maplestory"
version = "0.1.3"
edition = "2024"
description = "easy-to-use maplestory API library"
documentation = "https://docs.rs/maplestory"
repository = "https://github.com/psvm203/maplestory"
license = "MIT"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
