[package]
name = "maplestory"
version = "0.1.4"
edition = "2024"
description = "easy-to-use maplestory API wrapper"
documentation = "https://docs.rs/maplestory"
repository = "https://github.com/psvm203/maplestory"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
