[package]
name = "maplestory"
version = "1.2.1"
edition = "2021"
description = "maplestory API wrapper"
documentation = "https://docs.rs/maplestory"
repository = "https://github.com/psvm203/maplestory"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4.4"
